# Research-Radar

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/app/: __init__.py  bridge_distinctness_repo.py  clusters_repo.py  config.py  contracts.py  evaluation_repo.py  main.py  papers_repo.py  ranked_explanations.py  scores_repo.py  search_repo.py  similarity_repo.py  trends_repo.py
apps/api/tests/: test_bridge_distinctness.py  test_clusters_inspect.py  test_evaluation_compare.py  test_evaluation_summary.py  test_meta_product.py  test_papers_endpoints.py  test_papers_similar.py  test_ranked_explanations.py  test_recommendations_ranked.py  test_recommendations_undercited.py  test_scores_repo.py  test_search_endpoint.py  test_similarity_repo.py  test_trends_repo.py  test_trends_topics.py
services/pipeline/: pyproject.toml
services/pipeline/pipeline/: __init__.py  bootstrap_loader.py  bridge_eligibility_failure_analysis.py  bridge_eligibility_sensitivity.py  bridge_experiment_readiness.py  bridge_neighbor_mix.py  bridge_objective_experiment_compare.py  bridge_objective_label_coverage.py  bridge_objective_labeled_outcome.py  bridge_objective_redesign_simulation.py  bridge_signal_diagnostics.py  bridge_weight_experiment_compare.py  bridge_weight_experiment_delta_summary.py  bridge_weight_experiment_delta_worksheet.py  bridge_weight_labeled_outcome.py  bridge_weight_response_rollup.py  cli.py  cluster_inspection.py  clustering.py  clustering_persistence.py  (+37 more)
(+217 files in other folders)
