[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-radar-api"
version = "0.1.0"
description = "FastAPI service for Research Radar."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "psycopg[binary]>=3.2",
]

[tool.setuptools.packages.find]
where = ["."]
