[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-radar-pipeline"
version = "0.1.0"
description = "ETL and ranking pipeline for Research Radar."
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2",
]

[tool.setuptools.packages.find]
where = ["."]
